[package]
name = "ghostpp-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# --- Async runtime & networking ---
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1"

# --- Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Error handling ---
thiserror = "2"

# --- Config / i18n catalogs ---
config = "0.15.8"

# --- Database (GhostDb trait, mirrors C++ CGHostDB; sqlite + postgres both
#     compiled in, backend selected at runtime via db_url) ---
async-trait = "0.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }

# --- Map parsing (MPQ archives via StormLib) ---
# stormlib-sys is pulled in transitively by stormlib itself; no need to depend on it directly.
stormlib = { path = "stormlib-rs/crates/stormlib" }

# --- Crypto / hashing (bncsutil port, checkRevision, replay CRC32) ---
sha1 = "0.10.6"
crc32fast = "1.4.2"
byteorder = "1.5.0"

# --- Replay storage (.w3g, mirrors packed.cpp's zlib segmented container) ---
flate2 = "1"

# --- Misc ---
rand = "0.9"

# Note: bncsutil (CD key decoding / XSHA1 / checkRevision) is embedded as the
# src/bncsutil module — no external crate needed.
