[package]
name = "ghostpp-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# --- Async runtime & networking ---
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1"

# --- Logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Error handling ---
thiserror = "2"

# --- Config / i18n catalogs ---
config = "0.15.8"

# --- Database (GhostDb trait, mirrors C++ CGHostDB; sqlite + postgres both
#     compiled in, backend selected at runtime via db_url) ---
async-trait = "0.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }

# --- Map parsing (MPQ archives via StormLib) ---
# stormlib-sys is pulled in transitively by stormlib itself; no need to depend on it directly.
stormlib = { path = "stormlib-rs/crates/stormlib" }

# --- Crypto / hashing (bncsutil port, checkRevision, replay CRC32) ---
sha1 = "0.10.6"
crc32fast = "1.4.2"
byteorder = "1.5.0"

# --- Replay storage (.w3g, mirrors packed.cpp's zlib segmented container) ---
flate2 = "1"

# --- Misc ---
rand = "0.9"

# Note: bncsutil (CD key decoding / XSHA1 / checkRevision) is embedded as the
# src/bncsutil module — no external crate needed.

# =============================================================================
# Build profiles
# =============================================================================

[profile.release]
# Whole-program optimization across all crates: measurable wins for the hot
# paths (SHA1/CRC over 70MB maps, zlib replay compression, packet codecs).
# Costs longer link time — acceptable for a release build.
lto = "fat"
# One codegen unit = maximum cross-function optimization (default is 16).
codegen-units = 1
opt-level = 3
# Keep line tables so RUST_BACKTRACE=1 gives readable backtraces from a
# long-running production bot; only a few MB over a fully stripped binary.
# (For the absolute smallest binary use: debug = false, strip = "symbols".)
debug = "line-tables-only"
strip = "none"
# Deliberately NOT setting `panic = "abort"`: with unwinding, tokio isolates a
# panicking task, so a bug in one game cannot take down every hosted game.

[profile.dev]
# Light optimization for our own code keeps compile times fast while making
# debug runs responsive.
opt-level = 1

[profile.dev.package."*"]
# Fully optimize dependencies even in dev builds: sha1/crc32fast/miniz_oxide
# run over the entire 70MB map file at startup — unusably slow at -O0
# (map loading takes ~30s+ in pure debug, ~1s with this). Dependencies rarely
# change, so this costs almost nothing after the first build.
opt-level = 3
